# oda_meta_scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: analyze_hosts.py  download_guppi_headers.py  plot_guppi_header_time.py  plot_spectrum_all_chan.py  plot_spectrum_multi_res.py  plot_spectrum_single_chan.py  scrape_btl_open_data.py  validate_guppi.py
